--- a/bioBlocks.html
+++ b/bioBlocks.html
@@ -2,7 +2,7 @@
 <!--
 The MIT License (MIT)
 
-Copyright (c) 2016 Universidad Politécnica de Madrid
+Copyright (c) 2016 Universidad PolitÃ©cnica de Madrid
 
 Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
 
@@ -576,7 +576,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 			<block type="math_number"></block>
 			<block type="text"></block>
 		</category>
-		<category name="Operartions">
+		<category name="Operations">
 			<!-- <block type="turbidostat"></block> -->
 	    	<block type="pipette"></block>
 			<block type="electrophoresis"></block>
