--- a/bioBlocks.html
+++ b/bioBlocks.html
@@ -567,16 +567,16 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
    <div id="blocklyDiv" style="position: absolute"></div>
 	
    <!--Definition of the toolbox in XML code-->
-	<xml id="toolbox" style="display: none"> 		
+	<xml id="toolbox" style="display: none"> 
+		<category name="Organization">
+			<block type="experiment"></block>
+			<block type="step"></block>
+		</category>		
 		<category name="Containers">
 			<block type="container"></block>
 			<block type="containerList"></block>
 		</category>
-		<category name="Inputs">
-			<block type="math_number"></block>
-			<block type="text"></block>
-		</category>
-		<category name="Operartions">
+		<category name="Operations">
 			<!-- <block type="turbidostat"></block> -->
 	    	<block type="pipette"></block>
 			<block type="electrophoresis"></block>
@@ -592,9 +592,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 			<block type="mix"></block>
 			<block type="flowCitometry"></block>
 		</category>
-		<category name="Organization">
-			<block type="experiment"></block>
-			<block type="step"></block>
+		<category name="Inputs">
+			<block type="math_number"></block>
+			<block type="text"></block>
 		</category>
 	 <!-- <category name="Logic">
 			<block type="controls_if"></block>
